# AIBlogAuto

./: .gitignore  README.md  pyproject.toml
blogauto/: __init__.py  agent.py  ai_providers.py  builder.py  changes.py  cli.py  config.py  prompts.py  registry.py  scanner.py  template_utils.py
recommanded_styles_and_frame/: cat.css  silky-reading-frame.html
recommanded_styles_and_frame/cyberpuck/: cyberpuck.html  pre_frame.html
scripts/: install.sh  maintain_and_submit.py
